# ha-aiper-s1pro

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
custom_components/aiper/: api.py  const.py  coordinator.py  manifest.json  profiles.py  sensor.py  state.py
custom_components/aiper_s1pro/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json  vacuum.py
tests/: test_coordinator_push.py  test_integration_setup.py  test_parsers.py  test_platform_entities.py  test_profiles.py
